Fix alerts to top of view, so they remain visible
Fixes #38

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -30,7 +30,7 @@ h1 {
 
 /* Alerts */
 .alert-container {
-    position: absolute;
+    position: fixed;
     z-index: 10000;
     top: 30px;
     left: 30px;
